[metadata]
name = unoserver
version = 0.0.2.dev0
description = An unoserver for file conversions with Libre Office
long_description = file: README.rst, CONTRIBUTORS.rst, CHANGES.rst
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Office/Business
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
keywords = libreoffice,conversion
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/unoconv/unoserver
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
    setuptools
test_suite = tests
python_requires = >= 3.7

[options.packages.find]
exclude =
    tests
    ve

[options.entry_points]
console_scripts =
  unoserver = unoserver.server:main
  unoconvert = unoserver.converter:main

[options.extras_require]
devenv =
    pytest
    pytest-cov
    black
    flake8
    pyroma
    zest.releaser

[flake8]
max-line-length=120

[tool:pytest]
testpaths =
    tests
