[metadata]
name = unoserver
version = 1.7.dev0
description = A server for file conversions with Libre Office
long_description = file: README.rst, CONTRIBUTORS.rst, CHANGES.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Office/Business
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
keywords = libreoffice,conversion,documents,uno,unoconv
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/unoconv/unoserver
license = MIT

[options]
packages = unoserver
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
    setuptools
test_suite = tests
python_requires = >= 3.8

[options.entry_points]
console_scripts =
  unoserver = unoserver.server:main
  unoconvert = unoserver.client:converter_main
  unocompare = unoserver.client:comparer_main

[options.extras_require]
devenv =
    pytest
    pytest-cov
    black
    flake8
    pyroma
    check-manifest
    zest.releaser

[flake8]
max-line-length=120

[tool:pytest]
testpaths =
    tests

[check-manifest]
ignore =
    .pre-commit-config.yaml
    tests/*
    tests/documents/*

[bdist_wheel]
universal=0
